Try this package.

--- a/.github/workflows/build-emacs-pgtk.yaml
+++ b/.github/workflows/build-emacs-pgtk.yaml
@@ -101,7 +101,7 @@ jobs:
           ncurses-devel \
           zlib-devel \
           sqlite-devel \
-          tree-sitter-devel \
+          libtree-sitter-devel \
           cairo-devel \
           pango-devel \
           gtk3-devel \
